[workspace]
members = [
    "hdkrs",
    "objio",
    "vtkio",
    "mshio",
]

# The following release options optimize the binary for speed and size.
# However this makes compile times much slower.
[profile.release]
strip = true        # Strips symbols
lto = true          # Enable fat lto
codegen-units = 1   # Improve opt between units
panic = "abort"     # No backtrace, symbols are stripped anyways.
#opt-level = "z"    # z is for size, for now we prioritize speed.


[workspace.dependencies]
meshx = { git = "https://github.com/elrnv/meshx.git", branch = "vtkio-0.7", version = "0.6", features = ["io", "serde_all"] }
