[package]
name = "hdkrs"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
links = "hdkrs"

[dependencies]
gut = { version = "0.7", features = ["io", "serde_all"] }
bytemuck = "1.5"
hashbrown = "0.11"
cxx = "1.0"
libc = "0.2"

[build-dependencies]
cbindgen = "0.18"
glob = "0.3"
cxx-build = "1.0"
cmake = { git = "https://github.com/elrnv/cmake-rs.git", version = "0.1" }
