[package]
name = "hdkrs"
version = "0.1.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A rust interface for the Houdini Development Kit (HDK)"
readme = "README.md"
edition = "2018"
links = "hdkrs"

homepage = "https://github.com/elrnv/hdkrs"
repository = "https://github.com/elrnv/hdkrs"

keywords = ["hdk", "plugin", "houdini", "sidefx"]

[dependencies]
meshx = { version = "0.5", features = ["io", "serde_all"] }
bytemuck = "1"
ahash = "0.7"
cxx = "1.0"
libc = "0.2"

[build-dependencies]
cbindgen = "0.20"
glob = "0.3"
cxx-build = "1.0"
cmake = "0.1"
