[package]
name = "objio-hdk"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
links = "cxxbridge-objiohdk"

[lib]
name = "objiors"
crate-type = ["staticlib"]

[dependencies]
gut = { version = "0.6", features = ["io", "serde_all"] }
hdkrs = { path = "../hdkrs" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = { git = "https://github.com/elrnv/cmake-rs.git", version = "0.1" }