[package]
name = "objio-hdk"
version = "0.1.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
links = "cxxbridge-objiohdk"

[lib]
name = "objiors"
crate-type = ["staticlib"]

[dependencies]
meshx = { workspace = "true" }
hdkrs = { path = "../hdkrs" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
