[package]
name = "vtkio-hdk"
version = "0.2.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
links = "cxxbridge-vtkiohdk"

[lib]
name = "vtkiors"
crate-type = ["staticlib", "rlib"]

[dependencies]
meshx = { version = "0.4", features = ["io", "serde_all"] }
hdkrs = { path = "../hdkrs" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = { git = "https://github.com/elrnv/cmake-rs.git", version = "0.1" }
