[package]
name = "vtkio-hdk"
version = "0.2.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
links = "cxxbridge-vtkiohdk"

[lib]
name = "vtkiors"
crate-type = ["staticlib", "rlib"]

[dependencies]
meshx = { version = "0.5", features = ["io", "serde_all"] }
hdkrs = { path = "../hdkrs" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
